add all leaf identification algorithms